# mkdocs-flake

./: .gitignore  .gitlab-ci.yml  README.md  flake-module.nix  flake.nix  python-overrides.nix  uv-overrides.nix
.github/workflows/: check.yml  pages.yml
documentation/: mkdocs.yml
documentation/docs/integration/: flake-parts.md
mkdocs/: pyproject.toml
modules/: documentation.nix
